修改安全验证相关代码